config/ingress/external-auth-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-User, X-Auth-Request-Email, authorization"
  name: external-auth-oauth2
  namespace: code-editor
spec:
  rules:
  - host: < YOUR_DOMAIN_NAME_HERE >
    http:
      paths:
      - backend:
          serviceName: esc-proxy
          servicePort: 80
        path: /
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: code-editor
spec:
  rules:
  - host: < YOUR_DOMAIN_NAME_HERE >
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - < YOUR_DOMAIN_NAME_HERE >
    secretName: vscode-ssl-secret
